Thu Jul 26 05:43:20 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/utils/logging/client/Logger_i.cpp:
        * cuts/utils/logging/client/logger/Client_Logger_Impl.h:
        * cuts/utils/logging/client/logger/Client_Logger_Impl.cpp:

          BUGFIX: There were race conditions when disconnecting the logger in a
          multi-threaded environment.

Thu Jul 26 05:06:45 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/ccm/CCM_Event_Handler_T.cpp:

          Fixed unknown exception error message.

        * cuts/utils/logging/client/interceptors/acelog/ACE_Log_Callback.inl:
        * cuts/utils/logging/client/interceptors/acelog/ACE_Log_Callback.cpp:
        * cuts/utils/logging/client/logger/Client_Logger.h:
        * cuts/utils/logging/client/logger/Client_Logger.cpp:
        * cuts/utils/logging/client/logger/Client_Logger_Impl.cpp:
        * cuts/utils/logging/client/logger/Format_Parser.h:
        * cuts/utils/logging/client/logger/Format_Parser.cpp:

          BUGFIX: The logger crashed when used in a multi-threaded context. This
          was due to using an old version of Boost Spirit.

Wed Jul 25 20:07:33 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/arch/dds/deployment/DDS_Component_Instance_Handler.h:

          Added missing template parameter.

        * cuts/iccm/arch/dds/servant/DDS_Publisher_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_Table_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_Table_T.inl:
        * cuts/iccm/arch/dds/servant/DDS_Publisher_Table_T.cpp:
        * cuts/iccm/arch/dds/servant/DDS_Servant.mpc:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.inl:
        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.cpp:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_skel_export.h:
        * cuts/iccm/arch/opensplice/servant/OpenSplice_stub_export.h: