@@ -1,3 +1,10 @@
+Thu Jul 26 19:58:25 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * cuts/utils/logging/client/logger/Client_Logger_Impl.cpp:
+        * cuts/utils/logging/client/logger/Format_Parser.cpp:
+
+          Fixed compilation errors on Linux.
+
 Thu Jul 26 05:43:20 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * cuts/utils/logging/client/Logger_i.cpp:
